# loc_diff

./: .gitignore  CMakeLists.txt  README.md  frames.gv  frames_2024-04-21_17.32.34.gv  install  package.xml  rom2109_install
black_donut_description/: CMakeLists.txt  package.xml
black_donut_description/launch/: description.launch.py
black_donut_description/urdf/: black_donut.xacro  camera.xacro  gazebo_control.xacro  gps.xacro  robot.urdf.xacro  ros2_control.xacro
config/: ekf.yaml
description/: CMakeLists.txt  package.xml
description/config/: my_controllers.yaml
description/launch/: description.launch.py
description/rviz/: black_donut.rviz  slam.rviz  test_odom copy.rviz
description/urdf/: depth_camera.xacro  gps.xacro  imu.xacro  lidar.xacro  robot.urdf.xacro  ros2_control.xacro
gazebo/: CMakeLists.txt  package.xml
gazebo/config/: twist_mux.yaml
gazebo/launch/: black_donut_sim_ros2_control.launch.py  controller_spawner.launch.py  mapviz.launch.py  sim_ros2_control.launch.py  test.launch.py
gazebo/rviz2/: display.rviz  nav2_default_view.rviz  rtabmap_test.rviz
gazebo/worlds/: cafe.world  custom.world  farm.world  hospital.world  sonoma_raceway.world
gps_goals_publisher/: CMakeLists.txt  package.xml
launch/: basic_mobile_bot_v1.launch.py  basic_mobile_bot_v2.launch.py  basic_mobile_bot_v3.launch.py
loc_extra/: CMakeLists.txt  package.xml
loc_extra/config/: ekf.yaml
models/: basic_mobile_bot_v1.urdf
models/basic_mobile_bot_description/: model.config
nav2_gps_waypoint_follower_demo/: .package.xml.swp
nav2_gps_waypoint_follower_demo/config/: demo_waypoints.yaml
nav2_gps_waypoint_follower_demo/launch/: gazebo_gps_world.launch.py  gps_waypoint_follower.launch.py
nav2_gps_waypoint_follower_demo/worlds/: blank.world
rlnav2/: CMakeLists.txt  package.xml
rlnav2/config/: dual_ekf_navsat_params.yaml  encoder_imu.yaml  nav2_no_map_params.yaml  test.yaml
rlnav2/launch/: dual_ekf_navsat.launch.py  gps_waypoint_follower.launch.py  rlbd_navigation_launch.py  test.launch.py
robot_localization/launch/: ekf.launch.py
rom2109_description/: CMakeLists.txt
rom2109_description/launch/: description.launch.py  description_ros2_control.launch.py  rviz.launch.py
rom2109_description/rviz2/: display.rviz
rom2109_description/urdf/: camera.xacro  depth_camera.xacro  gps.xacro  hw_ros2_control.xacro  lidar.xacro  (+3 more)
rom2109_gazebo/: README.md  package.xml
rviz/: urdf_config.rviz
(+50 files in other folders)
